# VoightKampffMachine

./: .gitignore  Dockerfile  IDL.rb  README.md  models.rb
P&P Transcribed/: Backgrounds.txt
P&P Transcribed/Apply Creative Problem Solving/: Primary Prompts.txt  Secondary Prompts.txt
P&P Transcribed/Demonstrate Imagination/: Patient Robot.txt  Primary Prompts.txt  Secondary Prompts.txt
P&P Transcribed/Experience and Process Grief/: Patient Robot.txt  Primary Prompts.txt  Violent Robot.txt
P&P Transcribed/Process Your Day/: Primary Prompts.txt  Secondary Prompts.txt
client/: build.sh  elm-package.json
client/src/: Main.elm
content/en/: Human.txt  Penalties.txt  penalties.json  suspect_backgrounds.json  suspect_notes.json
content/en/Apply Creative Problem Solving/: Violent Robot.txt
content/en/Demonstrate Imagination/: Violent Robot.txt
content/en/Experience and Process Grief/: Secondary Prompts.txt
content/en/Process Your Day/: Patient Robot.txt
content/en/card_templates/: human.json  patient_robot.json  primary_prompt.json  secondary_prompt.json
content/en/packets/apply_creative_problem_solving/: Patient Robot.txt  packet_info.json  patient_robots.json  secondary_prompts.json  violent_robots.json
content/en/packets/body/: packet_info.json  patient_robots.json
content/en/packets/demonstrate_imagination/: packet_info.json  (+1 more)
content/en/role_card_templates/: patient_robot.json  violent_robot.json
content/en/roles/: human.json  patient_robot.json  violent_robot.json
server/: Cargo.toml
server/src/: Untitled-1  content.rs  main.rs
(+42 files in other folders)
