[package]
name = "server"
version = "0.1.0"
authors = ["Keith Bauer <onesadcookie@gmail.com>"]

[dependencies]
dotenv = "~0.13.0"
futures = "~0.1.25"
log = "~0.4"
pretty_env_logger = "~0.2.4"
rand = "~0.5"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
lazy_static = "1.1.0"
warp = "~0.1.7"
